--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -88,10 +88,10 @@ jobs:
           python-version: |
             3.11
       - name: Install Python requirements
-        run: >
-          pip install -r ansible_collections/arista/avd/requirements.txt
-                      -r ansible_collections/arista/avd/requirements-dev.txt
-                      -e python-avd --config-settings editable_mode=compat
+        run: |
+          pip install -r ansible_collections/arista/avd/requirements.txt \
+                      -r ansible_collections/arista/avd/requirements-dev.txt \
+                      -e python-avd --config-settings editable_mode=compat \
                       --upgrade
       - name: Run pre-commit
         run: |
@@ -385,11 +385,11 @@ jobs:
             3.11
             3.12
       - name: 'Install Python requirements'
-        run: >
-          pip install -r ansible_collections/arista/avd/requirements.txt
-                      -r ansible_collections/arista/avd/requirements-dev.txt
-                      -e python-avd --config-settings editable_mode=compat
-                       --upgrade
+        run: |
+          pip install -r ansible_collections/arista/avd/requirements.txt \
+                      -r ansible_collections/arista/avd/requirements-dev.txt \
+                      -e python-avd --config-settings editable_mode=compat \
+                      --upgrade
       - name: 'Run ansible-test sanity'
         run: |
           cd ansible_collections/arista/avd/
@@ -405,11 +405,11 @@ jobs:
           echo "PY_COLORS=1" >> $GITHUB_ENV
       - uses: actions/checkout@v3
       - name: 'Install Python requirements'
-        run: >
-          pip install -r ansible_collections/arista/avd/requirements.txt
-                      -r ansible_collections/arista/avd/requirements-dev.txt
-                      -e python-avd --config-settings editable_mode=compat
-                       --upgrade
+        run: |
+          pip install -r ansible_collections/arista/avd/requirements.txt \
+                      -r ansible_collections/arista/avd/requirements-dev.txt \
+                      -e python-avd --config-settings editable_mode=compat \
+                      --upgrade
       - name: 'Run ansible-test units test cases'
         run: |
           cd ansible_collections/arista/avd/
@@ -432,11 +432,11 @@ jobs:
             3.11
             3.12
       - name: 'Install Python requirements'
-        run: >
-          pip install -r ansible_collections/arista/avd/requirements.txt
-                      -r ansible_collections/arista/avd/requirements-dev.txt
-                      -e python-avd --config-settings editable_mode=compat
-                       --upgrade
+        run: |
+          pip install -r ansible_collections/arista/avd/requirements.txt \
+                      -r ansible_collections/arista/avd/requirements-dev.txt \
+                      -e python-avd --config-settings editable_mode=compat \
+                      --upgrade
       - name: 'Run ansible-test integration test cases'
         run: |
           cd ansible_collections/arista/avd/
@@ -459,11 +459,11 @@ jobs:
             3.11
             3.12
       - name: 'Install Python requirements'
-        run: >
-          pip install -r ansible_collections/arista/avd/requirements.txt
-                      -r ansible_collections/arista/avd/requirements-dev.txt
-                      -e python-avd --config-settings editable_mode=compat
-                       --upgrade
+        run: |
+          pip install -r ansible_collections/arista/avd/requirements.txt \
+                      -r ansible_collections/arista/avd/requirements-dev.txt \
+                      -e python-avd --config-settings editable_mode=compat \
+                      --upgrade
       - name: 'Install Ansible requirements'
         run: |
           ansible-galaxy collection install -r ansible_collections/arista/avd/collections.yml
@@ -488,11 +488,11 @@ jobs:
             3.10
       - uses: actions/checkout@v3
       - name: 'Install Python requirements'
-        run: >
-          pip install -r ansible_collections/arista/avd/requirements.txt
-                      -r ansible_collections/arista/avd/requirements-dev.txt
-                      -e python-avd --config-settings editable_mode=compat
-                       --upgrade
+        run: |
+          pip install -r ansible_collections/arista/avd/requirements.txt \
+                      -r ansible_collections/arista/avd/requirements-dev.txt \
+                      -e python-avd --config-settings editable_mode=compat \
+                      --upgrade
       - name: 'Install Ansible requirements'
         run: |
           ansible-galaxy collection install -r ansible_collections/arista/avd/collections.yml
