adding a test with all SVIs in a bundle as per comment from Claus

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
@@ -47,9 +47,17 @@ vlan 1012
 vlan 1013
    name SVI_6
 !
+vlan 1014
+   name SVI_7
+!
+vlan 1015
+   name SVI_8
+!
 vrf instance MGMT
 !
 vrf instance SIT2
+!
+vrf instance SIT3
 !
 vrf instance SIT_VRF
 !
@@ -93,6 +101,16 @@ interface Vlan1013
    no shutdown
    vrf SIT2
 !
+interface Vlan1014
+   description SVI_7
+   no shutdown
+   vrf SIT3
+!
+interface Vlan1015
+   description SVI_8
+   no shutdown
+   vrf SIT3
+!
 interface Vxlan1
    description evpn_vlan_bundle_VTEP
    vxlan source-interface Loopback1
@@ -106,11 +124,13 @@ interface Vxlan1
    vxlan vlan 1010 vni 21010
    vxlan vlan 1013 vni 21013
    vxlan vrf SIT2 vni 654789
+   vxlan vrf SIT3 vni 654555
    vxlan vrf SIT_VRF vni 789654
 !
 ip routing
 no ip routing vrf MGMT
 ip routing vrf SIT2
+ip routing vrf SIT3
 ip routing vrf SIT_VRF
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -160,6 +180,12 @@ router bgp 65101
       redistribute learned
       vlan 1008-1009,1011-1012
    !
+   vlan-aware-bundle bundle4
+      rd 1.1.1.1:444
+      route-target both 304:444
+      redistribute learned
+      vlan 1014-1015
+   !
    vlan-aware-bundle SIT2
       rd 10.10.0.3:655089
       route-target both 655089:655089
@@ -189,6 +215,13 @@ router bgp 65101
       rd 10.10.0.3:654789
       route-target import evpn 654789:654789
       route-target export evpn 654789:654789
+      router-id 10.10.0.3
+      redistribute connected
+   !
+   vrf SIT3
+      rd 10.10.0.3:654555
+      route-target import evpn 654555:654555
+      route-target export evpn 654555:654555
       router-id 10.10.0.3
       redistribute connected
    !
