--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/molecule.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/molecule.yml
@@ -16,7 +16,7 @@ dependency:
   name: galaxy
   enabled: false
 driver:
-  name: default
+  name: delegated
   options:
     managed: false
 platforms:
