Refactor: Cleaning post rebase

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2.cfg
@@ -344,8 +344,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise WAN HA prefixes towards LAN and mark them with SoO
-   match interface Ethernet52
-   match interface Ethernet53
+   match ip address prefix-list PL-WAN-HA-PREFIXES
    set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-CONN-2-BGP permit 10
