--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3.yml
@@ -269,11 +269,6 @@ route_maps:
     - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
-  - sequence: 10
-    type: deny
-    description: Deny prefixes with our SoO set
-    match:
-    - extcommunity ECL-EVPN-SOO
   - sequence: 20
     type: deny
     description: Deny prefixes from WAN
@@ -284,6 +279,11 @@ route_maps:
     description: Mark prefixes originated from the LAN
     set:
     - extcommunity soo 192.168.42.2:423 additive
+  - sequence: 10
+    type: deny
+    description: Deny prefixes with our SoO set
+    match:
+    - extcommunity ECL-EVPN-SOO
 - name: RM-BGP-UNDERLAY-PEERS-OUT
   sequence_numbers:
   - sequence: 10
@@ -300,8 +300,7 @@ route_maps:
     type: permit
     description: Advertise WAN HA prefixes towards LAN and mark them with SoO
     match:
-    - interface Ethernet52
-    - interface Ethernet53
+    - ip address prefix-list PL-WAN-HA-PREFIXES
     set:
     - extcommunity soo 192.168.42.2:423 additive
 - name: RM-EVPN-SOO-IN
