Refactor: Change route-maps again but better

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2.cfg
@@ -319,18 +319,29 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:423
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
+ip prefix-list PL-WAN-HA-PEER-PREFIXES
+   seq 10 permit 172.17.0.8/31
+   seq 20 permit 172.17.0.10/31
+!
 ip prefix-list PL-WAN-HA-PREFIXES
-   seq 10 permit 172.17.0.0/16 eq 31
+   seq 10 permit 172.17.0.4/31
+   seq 20 permit 172.17.0.6/31
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN deny 10
-   description Deny prefixes with our SoO set
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
+   description Allow WAN HA peer interface prefixes
+   match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
+   description Allow prefixes originated from the HA peer
    match extcommunity ECL-EVPN-SOO
-!
-route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
-   description Deny prefixes from WAN
-   match as-path ASPATH-WAN
+   set as-path match all replacement auto auto
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
+   description Use WAN routes from HA peer as backup
+   match as-path ASPATH-WAN
+   set community no-advertise
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
    set extcommunity soo 192.168.42.2:423 additive
 !
@@ -343,9 +354,8 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    match route-type internal
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
-   description Advertise WAN HA prefixes towards LAN and mark them with SoO
+   description Advertise WAN HA prefixes towards LAN
    match ip address prefix-list PL-WAN-HA-PREFIXES
-   set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
