--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1A.cfg
@@ -360,7 +360,7 @@ router bgp 65104
       neighbor 123.1.1.10 ebgp-multihop 3
       neighbor 123.1.1.10 shutdown
       neighbor 123.1.1.10 send-community standard extended
-      neighbor 123.1.1.10 maximum-routes 0
+      neighbor 123.1.1.10 maximum-routes 0 warning-only
       neighbor 123.1.1.10 default-originate route-map RM-Tenant_A_WAN_Zone-123.1.1.10-SET-NEXT-HOP-OUT
       neighbor 123.1.1.10 update-source Loopback123
       neighbor 123.1.1.10 route-map RM-Tenant_A_WAN_Zone-123.1.1.10-SET-NEXT-HOP-OUT out
