--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DC1_TENANTS_NETWORKS/Tenant_A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DC1_TENANTS_NETWORKS/Tenant_A.yml
@@ -158,6 +158,7 @@ tenant_a:
             description: External IPv4 BGP peer
             send_community: standard extended
             maximum_routes: 0
+            maximum_routes_warning_only: true
             default_originate:
               always: false
             update_source: Loopback123
