--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-common-path-group.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-common-path-group.yml
@@ -391,6 +391,7 @@ router_path_selection:
     - name: Satellite
   - name: LB-PROD-AVT-POLICY-VOICE
     jitter: 42
+    lowest_hop_count: true
   - name: LB-PROD-AVT-POLICY-VIDEO
     loss_rate: '42.0'
   - name: LB-PROD-AVT-POLICY-DEFAULT
