--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
@@ -14,13 +14,16 @@ interface Management1
 !
 monitor telemetry postcard policy
    no disabled
-   ingress collection gre source 10.3.3.3 19.33.33.33
+   ingress collection gre source 10.3.3.3 10.3.3.4
    ingress sample rate 16384
-   ingress sample tcp-udp-checksum 393993
+   ingress sample tcp-udp-checksum 2343223
    profile abc
-      ingress sample policy abcd
-   sample policy abcde
-      match rule abcdef ipv4
-          destination prefix 10.10.0.0/24
+      ingress sample policy ingresspo1
+   sample policy samplepo1
+      match rule rule1 ipv4
+         destination prefix 10.3.3.0/24
+         source prefix 3.4.5.0/24
+           protocol tcp destination port 77, 89, 99
+ 
 !
 end
