--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-telemetry-postcard.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-telemetry-postcard.yml
@@ -3,18 +3,24 @@ monitor_telemetry_postcard:
   ingress:
     collection:
       source: 10.3.3.3
-      destination: 19.33.33.33
+      destination: 10.3.3.4
     sample:
       rate: 16384
-      tcp_udp_checksum: 393993
+      tcp_udp_checksum: 2343223
   profile:
     name: abc
-    ingress_sample_policy: abcd
+    ingress_sample_policy: ingresspo1
   sample_policy:
-    name: abcde
+    name: samplepo1
     match_rule:
-      rule_name: abcdef
+      rule_name: rule1
+      ipversion: ipv4
       destination_prefix:
-        prefix2:
-          prefix_address: 10.10.0.0
-          prefix_mask: 24
+        prefix_address: 10.3.3.0
+        prefix_mask: 24
+      source_prefix:
+        prefix_address: 3.4.5.0
+        prefix_mask: 24
+      protocol:
+        type_of_protocol: tcp
+        destination_port: 77, 89, 99
