--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
@@ -190,7 +190,7 @@ ip security
    profile CP-PROFILE
       ike-policy CP-IKE-POLICY
       sa-policy CP-SA-POLICY
-      connection add
+      connection start
       shared-key 7 ABCDEF1234567890
       dpd 10 50 clear
       mode transport
