--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
@@ -76,7 +76,7 @@ ip security
    profile AUTOVPN
       ike-policy AUTOVPN-IKE
       sa-policy AUTOVPN-SA
-      connection add
+      connection start
       shared-key 7 ABCDEF1234567890
       dpd 10 50 clear
       mode transport
