Adding support to include port name in match rules

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
@@ -23,7 +23,9 @@ monitor telemetry postcard policy
       match rule rule1 ipv4
          destination prefix 10.3.3.0/24
          source prefix 3.4.5.0/24
-           protocol tcp destination port 77, 89, 99
+         protocol tcp destination port www
+         protocol tcp destination port 78-80
+         protocol tcp destination port 77
  
 !
 end
