--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard.schema.yml
@@ -87,7 +87,7 @@ keys:
                     type: str
                     valid_values: [ tcp, udp ]
                   destination_port:
-                    type: str
+                    type: list
                     description: |
                       Enter the port number or range or multiple port numbers with comma seperated values.
                       Examples:
