Feat(eos_cli_config_gen): Adding asset_tag for hardware

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/hardware.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/hardware.cfg
@@ -10,6 +10,8 @@ hardware speed-group 1 serdes 10g
 hardware speed-group 2 serdes 25g
 hardware speed-group 3/1 serdes 25g
 !
+hardware asset_tag switch Test_tag
+!
 no enable password
 no aaa root
 !
