--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3367,6 +3367,12 @@ keys:
             serdes:
               type: str
               description: Serdes speed like "10g" or "25g"
+      asset_tag:
+        type: dict
+        keys:
+          switch:
+            type: str
+            description: User-supplied asset tag/ID.
   hardware_counters:
     type: dict
     keys:
