--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/hardware.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/hardware.schema.yml
@@ -30,3 +30,9 @@ keys:
             serdes:
               type: str
               description: Serdes speed like "10g" or "25g"
+      asset_tag:
+        type: dict
+        keys:
+          switch:
+            type: str
+            description: User-supplied asset tag/ID.
